--- a/index1.html
+++ b/index1.html
@@ -64,7 +64,7 @@
     </div>
     <div>
       <div id="nav">
-        <a href="index0.html"><div class="z" rel="prev"></div></a>  <a href="index2.html"><div class="z" rel="next"></div></a>
+        <a href=""><div class="z" rel="prev"></div></a>  <a href="index2.html"><div class="z" rel="next"></div></a>
       </div>
     </div>
   </div>
