--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
 	</div>
 </div> 
     <div class="b1">
-    <form>
+    <form> Sorry, we had to truncate this directory to 1,000 files. 1,680 entries were omitted from the list. 
       <div id="search" class="cf"><h2>Search:</h2>
         <input type="text" name="search" value="Search by name" class="empty"/><div class="state"></div>
         <div class="results"></div>
@@ -64,7 +64,7 @@
     </div>
     <div>
       <div id="nav">
-        <a href="index1.html"><div class="z" rel="prev"></div></a>  <a href="index3.html"><div class="z" rel="next"></div></a>
+        <a href="index.html"><div class="z" rel="prev"></div></a>  <a href="index3.html"><div class="z" rel="next"></div></a>
       </div>
     </div>
   </div>
