--- a/index2674.html
+++ b/index2674.html
@@ -64,7 +64,7 @@
     </div>
     <div>
       <div id="nav">
-        <a href="index2673.html"><div class="z" rel="prev"></div></a>  <a href="index2675.html"><div class="z" rel="next"></div></a>
+        <a href="index2673.html"><div class="z" rel="prev"></div></a>  <a href=""><div class="z" rel="next"></div></a>
       </div>
     </div>
   </div>
